--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SocialNexusFacebook</string>
-    <string name="action_settings">Settings</string>
-    <string name="app_id">567887829948840</string>
-    <string name="title_facebook_login">Login</string>
-	<string name="settings">Settings</string>
+    <string name="app_name">SocialNexus</string>
+
 </resources>
