--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,24 +3,7 @@
 
     <string name="app_name">SocialNexus</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="login">Login</string>
-    <string name="register">Register</string>
-    <string name="title_activity_register">MainActivity</string>
-    <string name="next">Next</string>
-    <string name="username">Username:</string>
-    <string name="password">Password:</string>
-    <string name="confirmpassword">Confirm Password:</string>
-    <string name="choices">Please check the social media you would like to connect to</string>
-    <string name="title_activity_splash">MainActivity</string>
-    <string name="loading">Loading</string>
-    <string name="title_activity_addfacebook">MainActivity</string>
-    <string name="addaccount">Add Account</string>
-    <string name="title_activity_addtwitter">MainActivity</string>
-    <string name="title_activity_addgplus">MainActivity</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-
+    <string name="app_id">567887829948840</string>
+    <string name="title_facebook_login">Login</string>
+	<string name="settings">Settings</string>
 </resources>
